testdata/trans/error/unknown-imports/err.go
package foo

import (
	"/path/to/unknown/package1"
	"/path/to/unknown/package2"
	"/path/to/unknown/package3"
)
